--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
+    "clean": "rm index.html & rm asset-manifest.json & rm manifest.json & rm favicon.ico & rm service-worker.js & rm -fr static",
     "build-css": "node-sass-chokidar src/ -o src",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start-js": "react-scripts-ts start",
-    "start": "npm-run-all -p watch-css start-js",
+    "start": "npm-run-all -p clean watch-css start-js",
     "build-js": "react-scripts-ts build",
-    "build": "npm-run-all build-css build-js",
+    "build": "npm-run-all clean build-css build-js build:after",
+    "build:after": "mv build/* . && rmdir build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
   },
